# Robot01

./: .gitignore  README.md
Source/Inside/CAM/: makefile~
Source/Inside/Control/: Control_Server.hpp  makefile~
Source/Inside/GPIO/: GPIO_Interface.hpp  Steering.cpp  Steering.hpp  main.cpp
Source/Inside/Sensor_Unit/: i2c_access.cpp
Source/Inside/Shared/: Sensor_Unit.hpp  Server_class.cpp  socket_connection.hpp
Source/Remote/Robot_Monitor/: Makefile  Robot_Monitor.pro  Sensor_Connection.cpp  main_window.hpp  map_widget.cpp  moc_main_window.cpp  moc_map_widget.cpp  moc_status_widget.cpp  status_widget.cpp
Source/Remote/connection_library/: Server_inet.cpp  connection_library.creator.user.e1dd2f2.2.6pre1  connection_library.hpp  makefile  makefile~  socket_connection.cpp  socket_inet.cpp
Source/Remote/joystick_node/: connection_library.hpp  joystick_node
Source/Remote/sensor_connection_test/: main.cpp  makefile
documents/: imu_data_table.ods  imu_map.rm  wheel decoder analysis.ods
prototypes/XMLWriter/: SensorConfig.xml  XMLElement.cpp  XMLElement.hpp  XMLWriter  XMLWriter.cpp  XMLWriter.hpp  main.cpp  makefile
prototypes/udp_lib_client/: main.cpp  makefile  udp_socket_client
prototypes/udp_lib_server/: main.cpp  makefile  udp_socket_server
prototypes/udp_socket_client/: main.cpp  makefile  udp_socket_client
prototypes/udp_socket_server/: main.cpp  makefile  udp_socket_server
source/Inside/: setup.sh
source/Inside/Control/: Control_Server  main.cpp
source/Inside/GPIO/: makefile
source/Inside/Sensor_Unit/: Sensor_structs.hpp  i2c_access.hpp  logfile  logfile.cpp  makefile
source/Inside/Shared/: Server_class.hpp  Server_local.hpp
source/Inside/connection_library/: connection_library.hpp  socket_connection.cpp  socket_inet.cpp
source/Inside/microControler/: adc.h  makefile  timer.h
source/Remote/Robot_Monitor/: CMakeLists.txt  Robot_Monitor  Sensor_Connection.hpp  main.cpp
source/Remote/joystick_node/: main.cpp  makefile
source/Shared/connection_library/: CMakeLists.txt  backup  server_inet.cpp  socket_connection.hpp  socket_inet.hpp
source/helper_programms/i2c_register_map/: CMakeLists.txt  ControlWidget.cpp  ControlWidget.hpp  MainWindow.cpp  MainWindow.hpp  RegisterMap.cpp  RegisterMap.h  RegisterMap.hpp  RegisterMapper.cpp  RegisterMapper.hpp  TableWidget.cpp  TableWidget.hpp  imu_map.rm  main.cpp
source/inside/CAM/: CAM_Server  main.cpp
source/inside/Control/: makefile
source/inside/GPIO/: GPIO
source/inside/Sensor_Unit/: Sensor_Server.hpp  Sensor_Unit  logfile.hpp
source/inside/Shared/: GPIO.hpp  Server_inet.cpp  Server_inet.hpp  Server_local.cpp  socket_connection.cpp
source/inside/cam/: CMakeLists.txt  main.cpp  makefile
source/inside/connection_library/: makefile
source/inside/control/: CMakeLists.txt  Control_Server.cpp  Control_Server.hpp
source/inside/gpio/: CMakeLists.txt  GPIO_Interface.cpp  Steering.hpp  main.cpp
source/inside/joystick_node/: GPIO.hpp  joystick_node  main.cpp
source/inside/microControler/: adc.c  backup.txt  main.elf  main.hex  timer.c  twislave.c  twislave.h
source/inside/sensor_unit/: CMakeLists.txt  Sensor_Server.cpp  Sensor_Server.hpp  Sensor_Server_analyse_functions.cpp  Sensor_Server_working_thread.cpp  i2c_access.cpp  i2c_access.hpp  kalmann_backup  logfile.cpp  magnetometer_lsm9ds1.cpp  magnetometer_lsm9ds1.hpp  main.cpp  time_helper.hpp
source/inside/sensor_unit/misc/: logfile.cpp  time_helper.cpp
source/inside/sensor_unit/sensor_interfaces/: accelerometer_interface.cpp  accelerometer_interface.hpp  accelerometer_lsm9ds1.cpp  accelerometer_lsm9ds1.hpp  gyroscope_interface.cpp  gyroscope_interface.hpp  gyroscope_lsm9ds1.cpp  gyroscope_lsm9ds1.hpp  lsm9ds1_register.hpp  magnetometer_interface.cpp  magnetometer_interface.hpp  magnetometer_lsm9ds1.cpp  magnetometer_lsm9ds1.hpp
source/remote/joystick_node/: joystick_node.creator.user.e1dd2f2.2.6pre1
source/remote/robot_monitor/: CMakeLists.txt  DialogWindows.cpp  DialogWindows.hpp  GraphContainer.cpp  GraphContainer.hpp  GraphPlotter.cpp  GraphPlotter.h  MainWindow.cpp  MainWindow.hpp  SensorConnection.cpp  SensorConnection.hpp  Sensor_Connection.cpp  Sensor_Connection.hpp  Sensor_structs.hpp  connectionStatus.cpp  connectionStatus.hpp  graph_helper.cpp  graph_helper.hpp  main.cpp  main_window.cpp  main_window.hpp  output_box.cpp  output_box.hpp  status_widget.cpp
source/remote/robot_monitor/misc/: FileWriter.cpp  FileWriter.hpp
source/remote/robot_monitor_BACKUP/: GraphPlotter.cpp  Sensor_Connection.cpp  Sensor_Connection.hpp  graph_helper.cpp  graph_helper.hpp  main_window.cpp  main_window.hpp  map_widget.cpp  map_widget.hpp  output_box.cpp  output_box.hpp  status_widget.hpp
source/remote/sensor_connection_test/: Sensor_Connection.cpp  Sensor_Connection.hpp  sensor_connection_test  sensor_connection_test.creator.user.e1dd2f2.2.6pre1
source/shared/XML_library/: CMakeLists.txt  XMLWriter.cpp  XMLWriter.hpp
source/shared/connection_library/: CMakeLists.txt  backup  connection_library.cpp  connection_library.hpp  message_types.hpp  message_types.hpp_backup  server_inet.cpp  server_inet.hpp  server_inet_udp.cpp  server_inet_udp.hpp  socket_connection.cpp  socket_connection.hpp  socket_inet.cpp  socket_inet.hpp  socket_inet_udp.cpp  socket_inet_udp.hpp  tcp_socket.cpp  tcp_socket.hpp  udp_connection_inet.cpp  udp_connection_inet.hpp
source/shared/joystick_node/: CMakeLists.txt  gpio.hpp  main.cpp
source/shared/micro_controller/: CMakeLists.txt  adc.c  adc.h  main.c  sonar.c  sonar.h  timer.c  twislave.c  twislave.h
source/shared/protocol_headers/: CMakeLists.txt  Sensor_structs.hpp  dummy_lib.cpp  gpio_protocol.hpp  sensor_protocol.hpp
